# tutorial_yarp-producer-consumer

./: .gitignore  CMakeLists.txt  README.md
bufferedport/: consumer.cpp  producer.cpp
port/: consumer.cpp  producer.cpp
